# puyo2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bit_field.go  bit_field_export.go  bit_field_test.go  color.go  field_bits.go  field_bits_test.go  go.mod  ips_nazo.go  ips_nazo_solve.go  ips_nazo_solve_test.go  ips_nazo_test.go  list  rensa_result.go  score.go  search.go  search_bench_test.go  search_benchmark_test.go  search_mode.go  search_test.go  search_v2.go  search_v2_opt_test.go  search_v2_test.go  shape_bit_field.go  shape_bit_field_export.go  shape_bit_field_test.go  shape_rensa_result.go  utils.go  utils_test.go
.github/workflows/: go.yml  release.yml  rust.yml
cmd/dfield/: draw_field.go
cmd/dpuyo/: draw_puyo.go
cmd/nazo/: main.go
cmd/pnconv/: main.go
cmd/pnsolve/: equivalent_hands.go  main.go  pnsolve2simus
crates/puyo2/: Cargo.toml  LICENSE  README.md
crates/puyo2/examples/: search_bench.rs
crates/puyo2/src/: bit_field.rs  bit_field_render.rs  cli_common.rs  color.rs  drop_compact.rs  field_bits.rs  ips_nazo.rs  lib.rs  render.rs  score.rs  search.rs  search_mode.rs  search_types.rs  shape_bit_field.rs  simple.rs  types.rs
crates/puyo2/tests/: bit_field_engine.rs  core_helpers.rs  dfield_cli.rs  dpuyo_cli.rs  field_bits_engine.rs  ips_nazo.rs  ips_nazo_judge.rs  nazo_cli.rs  placement.rs  pnconv_cli.rs  pnsolve2simus_cli.rs  pnsolve_cli.rs  render_exports.rs  rust_only_cutover.rs  search_v2.rs  search_v2_opt.rs  shape_bit_field_engine.rs
crates/puyo2/tests/common/: mod.rs
packaging/: README-install.txt
test/pnsolve/: a.json  b.json  (+5 more)
(+393 files in other folders)
